part 2 draft up